[gd_scene load_steps=28 format=3 uid="uid://dvjodc5t5wxm1"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/player.gd" id="1_dpnq5"]
[ext_resource type="Texture2D" uid="uid://54furj5lgxfw" path="res://Textures/Characters/Player.png" id="2_5qatb"]
[ext_resource type="Resource" uid="uid://bvast80iosmev" path="res://Data/Movement Data/Player Movement Data.tres" id="2_spjjl"]
[ext_resource type="Resource" uid="uid://c0qawwsbk0ym4" path="res://Data/Stats/Player Stats.tres" id="3_oteuq"]
[ext_resource type="Shader" path="res://Shaders/Hit Flash.gdshader" id="4_c6p70"]
[ext_resource type="PackedScene" uid="uid://bfmjbl00kj2vc" path="res://Scenes/Components/hurtbox.tscn" id="6_e3hcv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nbr8w"]
shader = ExtResource("4_c6p70")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_cbpyb"]
atlas = ExtResource("2_5qatb")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xxga"]
atlas = ExtResource("2_5qatb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ov8p"]
atlas = ExtResource("2_5qatb")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8v5i"]
atlas = ExtResource("2_5qatb")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5aqw"]
atlas = ExtResource("2_5qatb")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8arge"]
atlas = ExtResource("2_5qatb")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vrm8"]
atlas = ExtResource("2_5qatb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_86cm7"]
atlas = ExtResource("2_5qatb")
region = Rect2(0, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_bx4yl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbpyb")
}],
"loop": true,
"name": &"Fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xxga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ov8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8v5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ov8p")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5aqw")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8arge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vrm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86cm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vrm8")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k161k"]
radius = 3.0
height = 24.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dbnn4"]
shader = ExtResource("4_c6p70")
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpe5m"]
size = Vector2(6, 24)

[sub_resource type="Animation" id="Animation_mlu16"]
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand/Pivot/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -4)]
}

[sub_resource type="Animation" id="Animation_creca"]
resource_name = "Shoot"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand/Pivot/Pistol:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(10, -4), Vector2(4, -4), Vector2(10, -4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"small_shake"
}]
}

[sub_resource type="Animation" id="Animation_8vmw1"]
resource_name = "normal"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand/Pivot/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, -4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x67tq"]
_data = {
"RESET": SubResource("Animation_mlu16"),
"Shoot": SubResource("Animation_creca"),
"normal": SubResource("Animation_8vmw1")
}

[sub_resource type="Animation" id="Animation_q36re"]
resource_name = "Hit"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand/Pivot/Pistol:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_otwvt"]
resource_name = "Normal"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand/Pivot/Pistol:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ubivd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand/Pivot/Pistol:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hl060"]
_data = {
"Hit": SubResource("Animation_q36re"),
"Normal": SubResource("Animation_otwvt"),
"RESET": SubResource("Animation_ubivd")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_dpnq5")
movement_data = ExtResource("2_spjjl")
stats = ExtResource("3_oteuq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_nbr8w")
sprite_frames = SubResource("SpriteFrames_bx4yl")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_k161k")

[node name="Hand" type="Node2D" parent="."]

[node name="Pivot" type="Node2D" parent="Hand"]

[node name="Pistol" type="Sprite2D" parent="Hand/Pivot"]
material = SubResource("ShaderMaterial_dbnn4")
position = Vector2(10, -4)
texture = ExtResource("2_5qatb")
region_enabled = true
region_rect = Rect2(160, 64, 16, 16)

[node name="PistolBulletMarker" type="Marker2D" parent="Hand/Pivot/Pistol"]
visible = false
position = Vector2(6, -2)
gizmo_extents = 2.0

[node name="Hurtbox" parent="." instance=ExtResource("6_e3hcv")]
monitoring = false

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
shape = SubResource("RectangleShape2D_gpe5m")

[node name="ShootingAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "normal"
libraries = {
"": SubResource("AnimationLibrary_x67tq")
}

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Normal"
libraries = {
"": SubResource("AnimationLibrary_hl060")
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hurtbox"]
